fix(engine-spring): respect custom beans in scripts
* does not provide Spring beans in scripts when custom beans are defined
* removes memory restrictions for engine-spring tests

related to CAM-12958