@@ -138,7 +138,6 @@
                 <dependency>org.camunda.bpm:camunda-engine-spring</dependency>
             </dependenciesToScan>
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
-            <argLine>-XX:MaxPermSize=160m -Xmx768m</argLine>
         </configuration>
       </plugin>
     </plugins>
